# c-project

./: CMakeLists.txt  compile.sh  file_manager.cpp  file_manager.h  main.cpp  pdf_extractor.cpp  pdf_extractor.h  pdf_extractor_app  relevance_scorer.cpp  relevance_scorer.h  scholar_search.cpp  scholar_search.h
